fix text spacing

--- a/desktop/assets/css/desktop.css
+++ b/desktop/assets/css/desktop.css
@@ -1191,6 +1191,11 @@ iframe {
 
 .help-text {
   margin-left: 25px;
+  white-space: pre;
+  display: flex;
+}
+.command {
+  width: 15%;
 }
 .context-menu {
   position: absolute;
